# Hackathon-II-Phase-1

./: .gitignore  CLAUDE.md  README.md  deploy-aks.sh  pyproject.toml
.specify/memory/: constitution.md
.specify/prompts/: .gitkeep
backend/: pyproject.toml
backend/src/: agent.py  mcp_tools.py
backend/src/routes/: tasks.py
frontend/: package-lock.json  package.json
frontend/app/api/auth/[...all]/: route.ts
frontend/app/api/auth/session/: route.ts
frontend/app/api/auth/signin/: route.ts
frontend/app/api/auth/signup/: route.ts
frontend/app/api/proxy/: route.ts
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/hooks/: useVoiceInput.ts
frontend/lib/: api.ts
frontend/public/: manifest.json
specs/: 001-phase1.md
src/: __init__.py  cli.py  exceptions.py  main.py  models.py  storage.py
tests/: __init__.py  test_storage.py
