[project]
name = "todo-evolution"
version = "0.1.0"
description = "Phase I: In-Memory Todo Console Application - Hackathon II Evolution of Todo"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Tasmeer Jamali" }
]
keywords = ["todo", "cli", "spec-driven", "hackathon"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
todo = "src.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
